- Implement receiver connection to Server - fix formatting in state-view.js for iscp commands

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
         </script>
         {% block head %}{% endblock %}
     </head>
-    <body class="ui-mobile-viewport ui-overlay-c">
+    <body>
 
         {% block body %}{% endblock %}
 
